--- a/oop-project/oop-project/oop-project.vcxproj
+++ b/oop-project/oop-project/oop-project.vcxproj
@@ -115,14 +115,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Admin.cpp" />
     <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="FileHandler.cpp" />
+    <ClCompile Include="LoanControl.cpp" />
+    <ClCompile Include="LoanRecord.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Admin.h" />
     <ClInclude Include="Equipment.h" />
     <ClInclude Include="FileHandler.h" />
+    <ClInclude Include="LoanControl.h" />
+    <ClInclude Include="LoanRecord.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
